--- a/index.html
+++ b/index.html
@@ -51,6 +51,48 @@
         </table>
     </div>
 
+    <div class="mobile-table">
+        <table>
+            <tr>
+                <td>No. of Notes</td>
+                <td>Note</td>
+            </tr>
+            <tr>
+                <td>₹ 2000</td>
+                <td class="noNotes-mobile"></td>
+            </tr>
+            <tr>
+                <td>₹ 500</td>
+                <td class="noNotes-mobile"></td>
+            </tr>
+            <tr>
+                <td>₹ 100</td>
+                <td class="noNotes-mobile"></td>
+            </tr>
+            <tr>
+                <td>₹ 50</td>
+                <td class="noNotes-mobile"></td>
+            </tr>
+            <tr>
+                <td>₹ 20</td>
+                <td class="noNotes-mobile"></td>
+            </tr>
+            <tr>
+                <td>₹ 10</td>
+                <td class="noNotes-mobile"></td>
+            </tr>
+            <tr>
+                <td>₹ 5</td>
+                <td class="noNotes-mobile"></td>
+            </tr>
+            <tr>
+                <td>₹ 1</td>
+                <td class="noNotes-mobile"></td>
+            </tr>
+            </tr>
+        </table>
+    </div>
+
     <footer>
         <h1>nbadolla</h1>
 
