--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <title>nbadolla | cash register manager</title>
 </head>
 <body>
-    <h1><ins>Register Manager</ins></h1>
+    <header>
+        <h1><ins>Register Manager</ins></h1>
+    </header>
+    
     <h3>find the minimum number of notes to return</h3>
     <h3>enter the bill amount and cash given by customer</h3>
     <h2>Bill Amount:</h2>
@@ -19,10 +22,8 @@
     <input id="cashGiven" type="text" name="cashGiven" placeholder="enter cash given">
     <br>
     <button id="calcBtn">Calculate</button>
-
-    <div class="display">
-
-    </div>
+    
+    <div class="display"></div>
 
     <div class="table">
         <table>
@@ -94,7 +95,12 @@
     </div>
 
     <footer>
+        <div class="code">
+            <a href="https://github.com/nayanbadolla/cash-manager">Source Code</a>
+        </div>
+        <!-- <br> -->
         <h1>nbadolla</h1>
+        <!-- <br> -->
 
         <!-- <a href="mailto:badollanayan@gmail.com" class="mail"><i class="fas fa-solid fa-envelope"></i> badollanayan@gmail.com</a>
         <br><br> -->
